# cpp-tdd-2023-10-18

./: .runsettings  CMakeLists.txt  README.md  tests.runsettings  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
_project-template-catch/: CMakeLists.txt
_project-template-catch/tests/: CMakeLists.txt  source_tests.cpp
_project-template-gtest/tests/: CMakeLists.txt
boost-di/: CMakeLists.txt
boost-di/src/: CMakeLists.txt
boost-di/tests/: CMakeLists.txt  di_tests.cpp
bowling-kata/tests/: source_tests.cpp
catch-demo/: main.cpp
catch-demo/src/: CMakeLists.txt
catch-demo/tests/: source_tests.cpp
document-editor-tdd/: ReadMe.md  main.cpp
document-editor-tdd/src/: CMakeLists.txt  application.hpp  clipboard.hpp  command.hpp  console.hpp  document.cpp  document.hpp
document-editor-tdd/tests/: CMakeLists.txt  application_tests.cpp  document_tests.cpp
document-editor-tdd/tests/mocks/: mock_clipboard.hpp  mock_command.hpp  mock_console.hpp
googlemock-demo/: CMakeLists.txt
googlemock-demo/src/: source.cpp
googlemock-demo/tests/: gmock_tests.cpp
injecting-dependencies/: CMakeLists.txt  main.cpp
injecting-dependencies/src/: button.cpp  button.hpp  led_light.cpp  led_light.hpp  led_switch.hpp
injecting-dependencies/tests/: button_tests.cpp
mars-rover-kata/: ReadMe.md
mars-rover-kata/src/: source.hpp
mars-rover-kata/tests/: source_tests.cpp
mocks-vs-stubs/: CMakeLists.txt  main.cpp
mocks-vs-stubs/src/: order.cpp  order.hpp  warehouse.hpp
mocks-vs-stubs/tests/: order_interactions_tests.cpp  order_state_tests.cpp
mother-vs-builder/: CMakeLists.txt
mother-vs-builder/src/: flight_model.hpp  flight_repository.hpp  flight_service.cpp  flight_service.hpp
mother-vs-builder/tests/: flight_service_tests.cpp
recently-used-list-catch/: main.cpp
recently-used-list-catch/src/: recently_used_list.cpp  recently_used_list.hpp
recently-used-list-catch/tests/: CMakeLists.txt  recently_used_list_tests.cpp
recently-used-list-gtest/: main.cpp
recently-used-list-gtest/src/: recently_used_list.cpp  recently_used_list.hpp
recently-used-list-gtest/tests/: CMakeLists.txt  recently_used_lists_tests.cpp
recently-used-list-kata/: README.md
